manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-nginx-service
spec:
  selector:
    app: demo-nginx
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
